--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-pdf": "^6.2.0",
+    "@types/styled-components": "^5.1.26",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-parallax-tilt": "^1.7.89",
+    "react-pdf": "^6.2.2",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.7.1",
+    "styled-components": "^5.3.6",
+    "tsparticles": "^2.7.1",
     "typescript": "^4.4.2",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
