--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-pdf": "^6.2.0",
     "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.3",
+    "framer-motion": "^8.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
