--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "caesar-portfolio",
   "version": "0.1.0",
+  "homepage": "https://caesarbourne.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -14,6 +15,7 @@
     "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.3",
     "framer-motion": "^8.5.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
@@ -33,7 +35,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
