--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "caesar-portfolio",
   "version": "0.1.0",
-  "homepage": "https://Caesarourne.github.io/",
+  "homepage": "https://CaesarBourne.github.io/CaesarPorfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
